# agentic-ops

./: .gitignore  README.md  pyproject.toml
data/incidents/: gen_001.json  gen_002.json  gen_003.json  gen_004.json  gen_005.json  gen_006.json  gen_007.json  gen_008.json  gen_009.json  gen_010.json  gen_011.json  gen_012.json  gen_013.json  gen_014.json  gen_015.json  gen_016.json  gen_017.json  gen_018.json  gen_019.json  gen_020.json  gen_021.json  gen_022.json  gen_023.json  gen_024.json  gen_025.json  gen_026.json  gen_027.json  gen_028.json  gen_029.json  gen_030.json  gen_031.json  gen_032.json  incident_001.json  incident_002.json  incident_003.json  incident_004.json  incident_005.json  incident_006.json  incident_007.json  incident_008.json
kb/k8s/: troubleshooting.md
kb/runbooks/: bad_config.md  cpu_spike.md  disk_full.md  dns_failure.md  oom_killed.md  service_unavailable.md
scripts/: evaluate.py  generate_incidents.py
src/agentic_ops/: __init__.py  agents.py  api.py  cli.py  config.py  rag.py
