[project]
name = "agentic-ops"
version = "0.1.0"
description = "Local DevOps AI agents with RAG, evaluation harness, and sandboxed demos"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]

dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "langchain>=0.2",
  "langchain-community>=0.2",
  "langchain-core>=0.2",
  "langchain-ollama>=0.2",
  "langgraph>=0.1.19",
  "langchain-text-splitters>=0.2",
  "faiss-cpu>=1.8.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "rich>=13.7",
  "typer>=0.12",
  "httpx>=0.27",
]

[project.scripts]
agentic-ops = "agentic_ops.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_ops"]
